--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -10,7 +10,7 @@ permalink: /publications/
 
 <div class="media">
 <div class="media-body">
-    <h5 class="mt-0"><a href="{{ publi.link.url }}">{{ publi.title }}</a></h5>
+    <h5 class="mt-0"><a target="_blank" href="{{ publi.link.url }}">{{ publi.title }}</a></h5>
     <p>{{ publi.authors }}<br>
     {{ publi.journal }}, {{ publi.year }}</p>
 </div>
