--- a/_pages/team.html
+++ b/_pages/team.html
@@ -1,6 +1,6 @@
 ---
 title: "Team"
-layout: gridlay
+layout: default
 excerpt: "RT2 Lab: Team members"
 sitemap: false
 permalink: /team/
@@ -8,30 +8,28 @@ permalink: /team/
 
 {% for team in site.data.team_members %}
     <h3>{{team.display_name}}</h3>
-    <ul class="list-unstyled">
-        {% for member in team.members %}
-        <div class="card mb-3">
-            <div class="row no-gutters">
+    {% for member in team.members %}
+        <div class="card">
+            <div class="row mt-3">
                 <div class="col-md-2">
-                <img src="{{ site.url }}{{ site.baseurl }}/images/teampic/{{ member.photo }}"
-                     class="card-img img-responsive"
-                     style="filter: grayscale(100%); max-width: 100px;"/>
+                    <img src="{{ site.url }}{{ site.baseurl }}/images/teampic/{{ member.photo }}"
+                        class="card-img img-responsive img-thumbnail"
+                        style="filter: grayscale(100%); max-width: 100px;"/>
                 </div>
-                <div class="col-md-10">
-                <div class="card-body">
-                <h4 class="card-title">{{ member.name }}</h4>
-                <p class="card-text">{{ member.info }}</p>
 
-                <ul>
-                    {% for education in member.education %}
-                        <li>{{education}}</li>
-                    {% endfor %}
-                </ul>
-                </div>
+                <div class="col-md-10">
+                    <div class="card-body">
+                    <h4 class="card-title">{{ member.name }}</h4>
+                    <p class="card-text">{{ member.info }}</p>
+
+                    <ul>
+                        {% for education in member.education %}
+                            <li>{{education}}</li>
+                        {% endfor %}
+                    </ul>
+                    </div>
                 </div>
             </div>
         </div>
-        {% endfor %}
-    </ul>
-
+    {% endfor %}
 {% endfor %}
