--- a/_pages/news.html
+++ b/_pages/news.html
@@ -1,7 +1,7 @@
 ---
 title: "News"
-layout: textlay
-excerpt: "RT2 Lab at Institu Curie"
+layout: default
+excerpt: "RT2 Lab at Institut Curie"
 sitemap: false
 permalink: /news.html
 ---
