better layout for team

--- a/_pages/team/index.html
+++ b/_pages/team/index.html
@@ -6,8 +6,26 @@ sitemap: false
 permalink: /team/
 ---
 
-{% for item in site.posts %}
+{% assign members = site.posts | where: 'category', 'staff' | sort: 'date' %}
 
-<a href="{{item.url}}">{{item.title}}</a>
+{% for member in members %}
+<div class="card team-member-card">
+    <div class="row mt-3">
+        <div class="col-md-2">
+            <a href={{member.url}}>
+                <img src="{{ site.url }}{{ site.baseurl }}/images/team/{{ member.image }}"
+                    class="card-img img-responsive img-thumbnail"
+                    style="filter: grayscale(100%); max-width: 100px;"/>
+            </a>
+        </div>
+
+        <div class="col-md-10">
+            <div class="card-body">
+            <h4 class="card-title">{{ member.title }}</h4>
+            <p class="card-text">{{ member.role }}</p>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endfor %}
