--- a/_pages/news.html
+++ b/_pages/news.html
@@ -5,6 +5,7 @@ excerpt: "RT2 Lab at Institut Curie"
 sitemap: false
 permalink: /news.html
 ---
+<h1>{{page.title}}</h1>
 
 <ul class="list-unstyled">
     {% for article in site.data.news %}
