--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -6,6 +6,8 @@ sitemap: false
 permalink: /publications/
 ---
 
+<h1>{{page.title}}</h1>
+
 {% for publi in site.data.publist %}
 
 <div class="media">
