--- a/_pages/team/index.html
+++ b/_pages/team/index.html
@@ -6,6 +6,8 @@ sitemap: false
 permalink: /team/
 ---
 
+<h1>{{page.title}}</h1>
+
 {% assign members = site.posts | where: 'category', 'staff' | sort: 'date' %}
 
 {% for member in members %}
