--- a/_pages/team/index.html
+++ b/_pages/team/index.html
@@ -8,8 +8,8 @@ permalink: /team/
 
 <h1>{{page.title}}</h1>
 
+<h2><a id="staff"></a>Staff</h2>
 {% assign members = site.posts | where: 'category', 'staff' | sort: 'date' %}
-
 {% for member in members %}
 <div class="card team-member-card">
     <div class="row mt-3">
