--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -8,14 +8,26 @@ permalink: /publications/
 
 <h1>{{page.title}}</h1>
 
-{% for publi in site.data.publist %}
+<ul class="list-group">
+{% for publi in site.data.publications %}
+    <li class="list-group-item">
+        <!-- authors -->
+        {% assign authors = "" | split:"/" %}
+        {% for author in publi.author %}
+            {% assign authors = authors | push: author.family %}
+        {% endfor %}
+        {{ authors | array_to_sentence_string }},
 
-<div class="media">
-    <div class="media-body">
-        <h5 class="mt-0"><a target="_blank" href="{{ publi.link.url }}">{{ publi.title }}</a></h5>
-        <p>{{ publi.authors }} <br>
-        {{ publi.journal }}, {{ publi.year }}</p>
-    </div>
-</div>
+        <!-- title with link -->
+        "{{ publi.title }}",
 
+        <!-- container -->
+        <b>{{ publi.container-title }}</b>,
+
+        <!-- DOI -->
+        {% if publi.DOI %}
+            <a href="https://doi.org/{{publi.DOI}}">DOI:{{publi.DOI}}</a>
+        {% endif %}
+    </li>
 {% endfor %}
+</ul>
