--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -8,26 +8,45 @@ permalink: /publications/
 
 <h1>{{page.title}}</h1>
 
-<ul class="list-group">
-{% for publi in site.data.publications %}
-    <li class="list-group-item">
-        <!-- authors -->
-        {% assign authors = "" | split:"/" %}
-        {% for author in publi.author %}
-            {% assign authors = authors | push: author.family %}
-        {% endfor %}
-        {{ authors | array_to_sentence_string }},
+<div class="panel-group" id="accordion">
+    <div class="panel panel-default">
 
-        <!-- title with link -->
-        "{{ publi.title }}",
+    {% for publi in site.data.publications %}
+        <div class="panel-heading">
+            <a data-toggle="collapse" data-parent="#accordion"
+               href="#collapse{{forloop.index}}"
+               style="color: inherit;">
+            <!-- authors -->
+            {% assign authors = "" | split:"/" %}
+            {% for author in publi.author %}
+                {% assign authors = authors | push: author.family %}
+            {% endfor %}
+            {{ authors | array_to_sentence_string }},
 
-        <!-- container -->
-        <b>{{ publi.container-title }}</b>,
+            <!-- title with link -->
+            "{{ publi.title }}",
 
-        <!-- DOI -->
-        {% if publi.DOI %}
-            <a href="https://doi.org/{{publi.DOI}}">DOI:{{publi.DOI}}</a>
-        {% endif %}
-    </li>
-{% endfor %}
-</ul>
+            <!-- container -->
+            <b>{{ publi.container-title }}</b>
+
+            <!-- issued date -->
+            ({{ publi.issued.date-parts | jsonify | slice: 3,4 }}),
+
+            <!-- DOI -->
+            {% if publi.DOI %}
+                <a href="https://doi.org/{{publi.DOI}}">DOI:{{publi.DOI}}</a>
+            {% endif %}
+            </a>
+        </div>
+
+        <div id="collapse{{forloop.index}}" class="panel-collapse collapse">
+            <div class="panel-body">
+                <p>{{ publi.abstract }}</p>
+
+                <a class="btn btn-outline-primary" href="https://doi.org/{{publi.DOI}}"
+                   role="button" target="blank">Link</a>
+            </div>
+        </div>
+    {% endfor %}
+    </div>
+</div>
