new page layout

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,7 +1,7 @@
 ---
-title: "Publications"
-layout: default
-excerpt: "RT2 Lab -- Publications."
+title: Publications
+layout: page
+excerpt: RT2 Lab -- Publications.
 permalink: /publications/
 ---
 
