fix publications code

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -7,17 +7,18 @@ permalink: /publications/
 
 <h2>Lab publications by year</h2>
 
+
 <ul class="list-unstyled">
-    {% assign publications = site.data.publications | sort: 'Publication Year' | group_by: 'Publication Year' | reverse %}
-    {% for group in  publications %}
+    {% assign pub_list = site.data.publications | sort: 'Publication Year' | group_by: 'Publication Year' | reverse %}
+
+    {% for group in pub_list %}
 
         {% assign year = group.name | to_integer %}
-        {% if year > 0 %}
-            <h3>Year {{ year }}</h3>
-            {% for publi in group.items %}
-                {%- include publication.html -%}
-            {% endfor %}
-        {% endif %}
+
+        <h3>Year {{ year }}</h3>
+        {% for publi in group.items %}
+            {%- include publication.html -%}
+        {% endfor %}
 
     {% endfor %}
 </ul>
