--- a/_pages/team/index.html
+++ b/_pages/team/index.html
@@ -5,34 +5,77 @@ permalink: /team/
 ---
 
 <!-- Staff -->
-
-<h2><a id="staff"></a>Staff</h2>
+<h2 class="mb-3"><a id="staff"></a>Staff</h2>
 
 {% assign members = site.posts | where: 'category', 'staff' | sort: 'date' %}
 <ul class="list-unstyled">
-{% for member in members %}
-    {%- include team_member.html -%}
+<div class="row">
+{% for member in members%}
+    {% assign ncols = 2 %}
+    {% assign i = forloop.index0 | modulo: ncols %}
+        <div class="col">
+            {%- include team_member.html -%}
+        </div>
+    {% if i == 1 %}
+        </div><div class="row">
+    {% endif %}
 {% endfor %}
+</div>
 </ul>
 
 <!-- Researchers -->
-
-<h2><a id="student"></a>Researchers</h2>
+<h2 class="mb-3"><a id="researcher"></a>Researchers</h2>
 
 {% assign members = site.posts | where: 'category', 'postdoc' | sort: 'date' %}
 <ul class="list-unstyled">
-{% for member in members %}
-    {%- include team_member.html -%}
+<div class="row">
+{% for member in members%}
+    {% assign ncols = 2 %}
+    {% assign i = forloop.index0 | modulo: ncols %}
+        <div class="col">
+            {%- include team_member.html -%}
+        </div>
+    {% if i == 1 %}
+        </div><div class="row">
+    {% endif %}
 {% endfor %}
+</div>
 </ul>
 
 <!-- Students -->
-
-<h2><a id="student"></a>Students</h2>
+<h2 class="mb-3"><a id="student"></a>Students</h2>
 
 {% assign members = site.posts | where: 'category', 'student' | sort: 'date' %}
 <ul class="list-unstyled">
-{% for member in members %}
-    {%- include team_member.html -%}
+<div class="row">
+{% for member in members%}
+    {% assign ncols = 2 %}
+    {% assign i = forloop.index0 | modulo: ncols %}
+        <div class="col">
+            {%- include team_member.html -%}
+        </div>
+    {% if i == 1 %}
+        </div><div class="row">
+    {% endif %}
 {% endfor %}
+</div>
+</ul>
+
+<!-- Alumni -->
+<h2 class="mb-3"><a id="alumni"></a>Alumni</h2>
+
+{% assign members = site.posts | where: 'category', 'alumni' | sort: 'date' %}
+<ul class="list-unstyled">
+<div class="row">
+{% for member in members%}
+    {% assign ncols = 2 %}
+    {% assign i = forloop.index0 | modulo: ncols %}
+        <div class="col">
+            {%- include team_member.html -%}
+        </div>
+    {% if i == 1 %}
+        </div><div class="row">
+    {% endif %}
+{% endfor %}
+</div>
 </ul>
