students -> phd students

--- a/_pages/team/index.html
+++ b/_pages/team/index.html
@@ -43,9 +43,9 @@ permalink: /team/
 </ul>
 
 <!-- Students -->
-<h2 class="mb-3"><a id="student"></a>Students</h2>
+<h2 class="mb-3"><a id="student"></a>PhD Students</h2>
 
-{% assign members = site.posts | where: 'category', 'student' | sort: 'date' %}
+{% assign members = site.posts | where: 'category', 'phd-student' | sort: 'date' %}
 <ul class="list-unstyled">
 <div class="row">
 {% for member in members%}
